elements in landing page are aligned correctly and flexwrapped

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,7 +46,11 @@ header h1 {
 
 
 #landingContainer {
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
     background-color: white;
     border-color: lightgrey;
     border-radius: 4px;
@@ -59,10 +63,10 @@ header h1 {
     flex-wrap: wrap;
 }
 
-.quoteContainer {
+#quoteContainer {
     align-items: center;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     background:rgb(255, 255, 255);
     font-size: 1.2rem;
     border-color: lightgrey;
